samples/_failures_safe/1761443807_4cd043_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_366994ba.c: In function ‘main’:
./samples/SAFE/__tmp_366994ba.c:172:5: error: expected declaration or statement at end of input
  172 |     }
      |     ^
